se realiza  cambio para  poder  poner white papaer  ingles

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -218,6 +218,8 @@
   ],
   "Whitepaper": {
     "Read": "Lee",
-    "Click": "Click para descargar pdf"
+    "Click": "Click para descargar pdf",
+    "urlEsp":"https://firebasestorage.googleapis.com/v0/b/sunshine-ico.appspot.com/o/general%2FWHITEPAPER%20TRON%20final.pdf?alt=media&token=e71176ea-6f0d-460c-98bc-900da56f956b"
   }
+  
 }
