se  agregag traducccion beta  de walpaper

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,3 +1,6 @@
+
+
+
 {
   "Navbar": {
     "Acerca": "Acerca de",
@@ -219,7 +222,10 @@
   "Whitepaper": {
     "Read": "Lee",
     "Click": "Click para descargar pdf",
-    "urlEsp":"https://firebasestorage.googleapis.com/v0/b/sunshine-ico.appspot.com/o/general%2FWHITEPAPER%20TRON%20final.pdf?alt=media&token=e71176ea-6f0d-460c-98bc-900da56f956b"
+    "Urlesp": "https://firebasestorage.googleapis.com/v0/b/sunshine-ico.appspot.com/o/general%2FWHITEPAPER%20TRON%20FINAL%20esp.pdf?alt=media&token=c80746fb-8db3-47a1-a371-efd87d584436"
+    
+
   }
   
 }
+
