--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -221,6 +221,8 @@
   ],
   "Whitepaper": {
     "Read": "READ",
-    "Click": "Click to download pdf"
+    "Click": "Click to download pdf",
+    "Urlesp": "https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf'"
+
   }
 }
