--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -222,7 +222,7 @@
   "Whitepaper": {
     "Read": "READ",
     "Click": "Click to download pdf",
-    "Urlesp": "https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf'"
-
+    "Urlesp": "https://cors-anywhere.herokuapp.com/https://firebasestorage.googleapis.com/v0/b/sunshine-ico.appspot.com/o/general%2FWHITEPAPER%20TRON%20FINAL%20esp.pdf?alt=media&token=333df966-5b07-424d-b0f2-8c3df447eb98",
+    "UrlespG": "https://firebasestorage.googleapis.com/v0/b/sunshine-ico.appspot.com/o/general%2FWHITEPAPER%20TRON%20FINAL%20esp.pdf?alt=media&token=333df966-5b07-424d-b0f2-8c3df447eb98"
   }
 }
