--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -222,8 +222,8 @@
   "Whitepaper": {
     "Read": "Lee",
     "Click": "Click para descargar pdf",
-    "Urlesp": "https://firebasestorage.googleapis.com/v0/b/sunshine-ico.appspot.com/o/general%2FWHITEPAPER%20TRON%20FINAL%20esp.pdf?alt=media&token=c80746fb-8db3-47a1-a371-efd87d584436"
-    
+    "Urlesp": "https://cors-anywhere.herokuapp.com/https://firebasestorage.googleapis.com/v0/b/sunshine-ico.appspot.com/o/general%2FWHITEPAPER%20TRON%20FINAL%20esp.pdf?alt=media&token=333df966-5b07-424d-b0f2-8c3df447eb98",
+    "UrlespG": "https://firebasestorage.googleapis.com/v0/b/sunshine-ico.appspot.com/o/general%2FWHITEPAPER%20TRON%20FINAL%20esp.pdf?alt=media&token=333df966-5b07-424d-b0f2-8c3df447eb98"
 
   }
   
